@@ -5,23 +5,24 @@
  */
 package io.debezium.connector.oracle;
 
-import static org.fest.assertions.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
 
 import java.time.Duration;
 import java.util.Collections;
+import java.util.List;
 
 import org.junit.Test;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import io.debezium.config.CommonConnectorConfig;
 import io.debezium.config.Configuration;
 import io.debezium.config.Field;
-import io.debezium.connector.oracle.OracleConnectorConfig.LogMiningBufferType;
 import io.debezium.doc.FixFor;
-import io.debezium.relational.history.KafkaDatabaseHistory;
+import io.debezium.storage.kafka.history.KafkaSchemaHistory;
 
 public class OracleConnectorConfigTest {
 
@@ -32,13 +33,13 @@ public class OracleConnectorConfigTest {
 
         final OracleConnectorConfig connectorConfig = new OracleConnectorConfig(
                 Configuration.create()
-                        .with(OracleConnectorConfig.SERVER_NAME, "myserver")
+                        .with(CommonConnectorConfig.TOPIC_PREFIX, "myserver")
                         .with(OracleConnectorConfig.HOSTNAME, "MyHostname")
                         .with(OracleConnectorConfig.DATABASE_NAME, "mydb")
                         .with(OracleConnectorConfig.XSTREAM_SERVER_NAME, "myserver")
                         .with(OracleConnectorConfig.USER, "debezium")
-                        .with(KafkaDatabaseHistory.BOOTSTRAP_SERVERS, "localhost:9092")
-                        .with(KafkaDatabaseHistory.TOPIC, "history")
+                        .with(KafkaSchemaHistory.BOOTSTRAP_SERVERS, "localhost:9092")
+                        .with(KafkaSchemaHistory.TOPIC, "history")
                         .build());
         assertTrue(connectorConfig.validateAndRecord(OracleConnectorConfig.ALL_FIELDS, LOGGER::error));
     }
@@ -49,12 +50,12 @@ public class OracleConnectorConfigTest {
         final OracleConnectorConfig connectorConfig = new OracleConnectorConfig(
                 Configuration.create()
                         .with(OracleConnectorConfig.CONNECTOR_ADAPTER, "logminer")
-                        .with(OracleConnectorConfig.SERVER_NAME, "myserver")
+                        .with(CommonConnectorConfig.TOPIC_PREFIX, "myserver")
                         .with(OracleConnectorConfig.HOSTNAME, "MyHostname")
                         .with(OracleConnectorConfig.DATABASE_NAME, "mydb")
                         .with(OracleConnectorConfig.USER, "debezium")
-                        .with(KafkaDatabaseHistory.BOOTSTRAP_SERVERS, "localhost:9092")
-                        .with(KafkaDatabaseHistory.TOPIC, "history")
+                        .with(KafkaSchemaHistory.BOOTSTRAP_SERVERS, "localhost:9092")
+                        .with(KafkaSchemaHistory.TOPIC, "history")
                         .build());
         assertTrue(connectorConfig.validateAndRecord(OracleConnectorConfig.ALL_FIELDS, LOGGER::error));
     }
@@ -64,13 +65,13 @@ public class OracleConnectorConfigTest {
 
         final OracleConnectorConfig connectorConfig = new OracleConnectorConfig(
                 Configuration.create()
-                        .with(OracleConnectorConfig.SERVER_NAME, "myserver")
+                        .with(CommonConnectorConfig.TOPIC_PREFIX, "myserver")
                         .with(OracleConnectorConfig.URL, "jdbc:oci:thin:@myserver/mydatabase")
                         .with(OracleConnectorConfig.DATABASE_NAME, "mydb")
                         .with(OracleConnectorConfig.XSTREAM_SERVER_NAME, "myserver")
                         .with(OracleConnectorConfig.USER, "debezium")
-                        .with(KafkaDatabaseHistory.BOOTSTRAP_SERVERS, "localhost:9092")
-                        .with(KafkaDatabaseHistory.TOPIC, "history")
+                        .with(KafkaSchemaHistory.BOOTSTRAP_SERVERS, "localhost:9092")
+                        .with(KafkaSchemaHistory.TOPIC, "history")
                         .build());
         assertTrue(connectorConfig.validateAndRecord(OracleConnectorConfig.ALL_FIELDS, LOGGER::error));
     }
@@ -81,12 +82,12 @@ public class OracleConnectorConfigTest {
         final OracleConnectorConfig connectorConfig = new OracleConnectorConfig(
                 Configuration.create()
                         .with(OracleConnectorConfig.CONNECTOR_ADAPTER, "logminer")
-                        .with(OracleConnectorConfig.SERVER_NAME, "myserver")
+                        .with(CommonConnectorConfig.TOPIC_PREFIX, "myserver")
                         .with(OracleConnectorConfig.URL, "MyHostname")
                         .with(OracleConnectorConfig.DATABASE_NAME, "mydb")
                         .with(OracleConnectorConfig.USER, "debezium")
-                        .with(KafkaDatabaseHistory.BOOTSTRAP_SERVERS, "localhost:9092")
-                        .with(KafkaDatabaseHistory.TOPIC, "history")
+                        .with(KafkaSchemaHistory.BOOTSTRAP_SERVERS, "localhost:9092")
+                        .with(KafkaSchemaHistory.TOPIC, "history")
                         .build());
         assertTrue(connectorConfig.validateAndRecord(OracleConnectorConfig.ALL_FIELDS, LOGGER::error));
     }
@@ -97,13 +98,13 @@ public class OracleConnectorConfigTest {
         final OracleConnectorConfig connectorConfig = new OracleConnectorConfig(
                 Configuration.create()
                         .with(OracleConnectorConfig.CONNECTOR_ADAPTER, "logminer")
-                        .with(OracleConnectorConfig.SERVER_NAME, "myserver")
+                        .with(CommonConnectorConfig.TOPIC_PREFIX, "myserver")
                         .with(OracleConnectorConfig.URL,
                                 "jdbc:oracle:thin:@(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=192.68.1.11)(PORT=1701))(ADDRESS=(PROTOCOL=TCP)(HOST=192.68.1.12)(PORT=1701))(ADDRESS=(PROTOCOL=TCP)(HOST=192.68.1.13)(PORT=1701))(LOAD_BALANCE = yes)(FAILOVER = on)(CONNECT_DATA =(SERVER = DEDICATED)(SERVICE_NAME = myserver.mydomain.com)(FAILOVER_MODE =(TYPE = SELECT)(METHOD = BASIC)(RETRIES = 3)(DELAY = 5))))")
                         .with(OracleConnectorConfig.DATABASE_NAME, "mydb")
                         .with(OracleConnectorConfig.USER, "debezium")
-                        .with(KafkaDatabaseHistory.BOOTSTRAP_SERVERS, "localhost:9092")
-                        .with(KafkaDatabaseHistory.TOPIC, "history")
+                        .with(KafkaSchemaHistory.BOOTSTRAP_SERVERS, "localhost:9092")
+                        .with(KafkaSchemaHistory.TOPIC, "history")
                         .build());
         assertTrue(connectorConfig.validateAndRecord(OracleConnectorConfig.ALL_FIELDS, LOGGER::error));
     }
@@ -114,11 +115,11 @@ public class OracleConnectorConfigTest {
         final OracleConnectorConfig connectorConfig = new OracleConnectorConfig(
                 Configuration.create()
                         .with(OracleConnectorConfig.CONNECTOR_ADAPTER, "logminer")
-                        .with(OracleConnectorConfig.SERVER_NAME, "myserver")
+                        .with(CommonConnectorConfig.TOPIC_PREFIX, "myserver")
                         .with(OracleConnectorConfig.DATABASE_NAME, "mydb")
                         .with(OracleConnectorConfig.USER, "debezium")
-                        .with(KafkaDatabaseHistory.BOOTSTRAP_SERVERS, "localhost:9092")
-                        .with(KafkaDatabaseHistory.TOPIC, "history")
+                        .with(KafkaSchemaHistory.BOOTSTRAP_SERVERS, "localhost:9092")
+                        .with(KafkaSchemaHistory.TOPIC, "history")
                         .build());
         assertFalse(connectorConfig.validateAndRecord(OracleConnectorConfig.ALL_FIELDS, LOGGER::error));
     }
@@ -128,7 +129,7 @@ public class OracleConnectorConfigTest {
 
         final OracleConnectorConfig connectorConfig = new OracleConnectorConfig(
                 Configuration.create()
-                        .with(OracleConnectorConfig.SERVER_NAME, "myserver")
+                        .with(CommonConnectorConfig.TOPIC_PREFIX, "myserver")
                         .build());
 
         assertEquals(connectorConfig.getLogMiningBatchSizeDefault(), OracleConnectorConfig.DEFAULT_BATCH_SIZE);
@@ -141,7 +142,7 @@ public class OracleConnectorConfigTest {
 
         final OracleConnectorConfig connectorConfig = new OracleConnectorConfig(
                 Configuration.create()
-                        .with(OracleConnectorConfig.SERVER_NAME, "myserver")
+                        .with(CommonConnectorConfig.TOPIC_PREFIX, "myserver")
                         .build());
 
         assertEquals(connectorConfig.getLogMiningSleepTimeDefault(), OracleConnectorConfig.DEFAULT_SLEEP_TIME);
@@ -151,21 +152,31 @@ public class OracleConnectorConfigTest {
     }
 
     @Test
-    public void validViewFetchSizeDefaults() throws Exception {
-
+    @FixFor("DBZ-5146")
+    public void validQueryFetchSizeDefaults() throws Exception {
         final OracleConnectorConfig connectorConfig = new OracleConnectorConfig(
                 Configuration.create()
-                        .with(OracleConnectorConfig.SERVER_NAME, "myserver")
+                        .with(CommonConnectorConfig.TOPIC_PREFIX, "myserver")
                         .build());
+        assertEquals(connectorConfig.getQueryFetchSize(), 10_000);
+    }
 
-        assertEquals(connectorConfig.getLogMiningViewFetchSize(), OracleConnectorConfig.DEFAULT_VIEW_FETCH_SIZE);
+    @Test
+    @FixFor("DBZ-5146")
+    public void validQueryFetchSizeAvailable() throws Exception {
+        final OracleConnectorConfig connectorConfig = new OracleConnectorConfig(
+                Configuration.create()
+                        .with(CommonConnectorConfig.TOPIC_PREFIX, "myserver")
+                        .with(OracleConnectorConfig.QUERY_FETCH_SIZE, 15_000)
+                        .build());
+        assertEquals(connectorConfig.getQueryFetchSize(), 15_000);
     }
 
     @Test
     @FixFor("DBZ-2754")
     public void validTransactionRetentionDefaults() throws Exception {
         final Configuration config = Configuration.create()
-                .with(OracleConnectorConfig.SERVER_NAME, "myserver")
+                .with(CommonConnectorConfig.TOPIC_PREFIX, "myserver")
                 .build();
         final OracleConnectorConfig connectorConfig = new OracleConnectorConfig(config);
         assertThat(connectorConfig.getLogMiningTransactionRetention()).isEqualTo(Duration.ZERO);
@@ -177,7 +188,7 @@ public class OracleConnectorConfigTest {
         final Field transactionRetentionField = OracleConnectorConfig.LOG_MINING_TRANSACTION_RETENTION;
 
         Configuration config = Configuration.create()
-                .with(OracleConnectorConfig.SERVER_NAME, "myserver")
+                .with(CommonConnectorConfig.TOPIC_PREFIX, "myserver")
                 .with(transactionRetentionField, 3)
                 .build();
 
@@ -194,27 +205,53 @@ public class OracleConnectorConfigTest {
     }
 
     @Test
+    @FixFor("DBZ-6355")
+    public void testTransactionRetentionMs() throws Exception {
+        final Field transactionRetentionField = OracleConnectorConfig.LOG_MINING_TRANSACTION_RETENTION_MS;
+
+        Configuration config = Configuration.create()
+                .with(CommonConnectorConfig.TOPIC_PREFIX, "myserver")
+                .with(transactionRetentionField, 10800000L)
+                .build();
+
+        assertThat(config.validateAndRecord(Collections.singletonList(transactionRetentionField), LOGGER::error)).isTrue();
+
+        OracleConnectorConfig connectorConfig = new OracleConnectorConfig(config);
+        assertThat(connectorConfig.getLogMiningTransactionRetention()).isEqualTo(Duration.ofHours(3));
+
+        config = Configuration.create().with(transactionRetentionField, 0).build();
+        assertThat(config.validateAndRecord(Collections.singletonList(transactionRetentionField), LOGGER::error)).isTrue();
+
+        config = Configuration.create().with(transactionRetentionField, -1).build();
+        assertThat(config.validateAndRecord(Collections.singletonList(transactionRetentionField), LOGGER::error)).isFalse();
+
+        config = Configuration.create().with(transactionRetentionField, 900000L).build();
+        connectorConfig = new OracleConnectorConfig(config);
+        assertThat(connectorConfig.getLogMiningTransactionRetention()).isEqualTo(Duration.ofMinutes(15));
+    }
+
+    @Test
     @FixFor("DBZ-3557")
     public void testSnapshotLockMode() throws Exception {
         final Field snapshotLockMode = OracleConnectorConfig.SNAPSHOT_LOCKING_MODE;
 
         Configuration config = Configuration.create().with(snapshotLockMode, "shared")
-                .with(OracleConnectorConfig.SERVER_NAME, "myserver")
+                .with(CommonConnectorConfig.TOPIC_PREFIX, "myserver")
                 .build();
         assertThat(config.validateAndRecord(Collections.singletonList(snapshotLockMode), LOGGER::error)).isTrue();
 
         OracleConnectorConfig connectorConfig = new OracleConnectorConfig(config);
-        assertThat(connectorConfig.getSnapshotLockingMode().usesLocking()).isTrue();
+        assertThat(connectorConfig.getSnapshotLockingMode().get().usesLocking()).isTrue();
 
         config = Configuration.create()
-                .with(OracleConnectorConfig.SERVER_NAME, "myserver")
+                .with(CommonConnectorConfig.TOPIC_PREFIX, "myserver")
                 .with(snapshotLockMode, "none")
                 .build();
 
         assertThat(config.validateAndRecord(Collections.singletonList(snapshotLockMode), LOGGER::error)).isTrue();
 
         connectorConfig = new OracleConnectorConfig(config);
-        assertThat(connectorConfig.getSnapshotLockingMode().usesLocking()).isFalse();
+        assertThat(connectorConfig.getSnapshotLockingMode().get().usesLocking()).isFalse();
     }
 
     @Test
@@ -225,7 +262,7 @@ public class OracleConnectorConfigTest {
 
         // Test backward compatibility of rac.nodes using no port with database.port
         Configuration config = Configuration.create()
-                .with(OracleConnectorConfig.SERVER_NAME, "myserver")
+                .with(CommonConnectorConfig.TOPIC_PREFIX, "myserver")
                 .with(port, "1521")
                 .with(racNodes, "1.2.3.4,1.2.3.5")
                 .build();
@@ -238,7 +275,7 @@ public class OracleConnectorConfigTest {
 
         // Test rac.nodes using combination of with/without port with database.port
         config = Configuration.create()
-                .with(OracleConnectorConfig.SERVER_NAME, "myserver")
+                .with(CommonConnectorConfig.TOPIC_PREFIX, "myserver")
                 .with(port, "1521")
                 .with(racNodes, "1.2.3.4,1.2.3.5:1522")
                 .build();
@@ -250,7 +287,7 @@ public class OracleConnectorConfigTest {
 
         // Test rac.nodes using different ports with no database.port
         config = Configuration.create()
-                .with(OracleConnectorConfig.SERVER_NAME, "myserver")
+                .with(CommonConnectorConfig.TOPIC_PREFIX, "myserver")
                 .with(racNodes, "1.2.3.4:1523,1.2.3.5:1522")
                 .build();
 
@@ -262,7 +299,7 @@ public class OracleConnectorConfigTest {
 
         // Test rac.nodes using different ports that differ from database.port
         config = Configuration.create()
-                .with(OracleConnectorConfig.SERVER_NAME, "myserver")
+                .with(CommonConnectorConfig.TOPIC_PREFIX, "myserver")
                 .with(port, "1521")
                 .with(racNodes, "1.2.3.4:1523,1.2.3.5:1522")
                 .build();
@@ -283,29 +320,23 @@ public class OracleConnectorConfigTest {
     }
 
     @Test
-    @FixFor("DBZ-4169")
-    public void testRaiseErrorWhenSpecifyingInfinispanBufferLocation() throws Exception {
-        final Field bufferLocation = OracleConnectorConfig.LOG_MINING_BUFFER_LOCATION;
-
-        Configuration config = Configuration.create()
-                .with(OracleConnectorConfig.SERVER_NAME, "myserver")
-                .with(OracleConnectorConfig.LOG_MINING_BUFFER_TYPE, LogMiningBufferType.INFINISPAN)
-                .with(bufferLocation, "./target/data")
-                .build();
-
-        assertThat(config.validateAndRecord(Collections.singletonList(bufferLocation), LOGGER::error)).isFalse();
+    @FixFor("DBZ-2543")
+    public void testOpenLogReplicatorConfigFailureWhenNotProvidingRequiredOptions() throws Exception {
+        List<Field> fields = List.of(OracleConnectorConfig.OLR_SOURCE, OracleConnectorConfig.OLR_HOST, OracleConnectorConfig.OLR_PORT);
+        Configuration config = Configuration.create().with(OracleConnectorConfig.CONNECTOR_ADAPTER, "olr").build();
+        assertThat(config.validateAndRecord(fields, LOGGER::error)).isFalse();
     }
 
     @Test
-    @FixFor("DBZ-4169")
-    public void testRaiseNoErrorWhenNotSpecifyingInfinispanBufferLocation() throws Exception {
-        final Field bufferLocation = OracleConnectorConfig.LOG_MINING_BUFFER_LOCATION;
-
+    @FixFor("DBZ-2543")
+    public void testOpenLogReplicatorConfig() throws Exception {
+        List<Field> fields = List.of(OracleConnectorConfig.OLR_SOURCE, OracleConnectorConfig.OLR_HOST, OracleConnectorConfig.OLR_PORT);
         Configuration config = Configuration.create()
-                .with(OracleConnectorConfig.SERVER_NAME, "myserver")
-                .with(OracleConnectorConfig.LOG_MINING_BUFFER_TYPE, LogMiningBufferType.INFINISPAN)
+                .with(OracleConnectorConfig.CONNECTOR_ADAPTER, "olr")
+                .with(OracleConnectorConfig.OLR_SOURCE, "oracle")
+                .with(OracleConnectorConfig.OLR_HOST, "localhost")
+                .with(OracleConnectorConfig.OLR_PORT, "9000")
                 .build();
-
-        assertThat(config.validateAndRecord(Collections.singletonList(bufferLocation), LOGGER::error)).isTrue();
+        assertThat(config.validateAndRecord(fields, LOGGER::error)).isTrue();
     }
 }
